PCHR-2164: Change 2 == to ===

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -227,7 +227,7 @@
                           class="fa fa-file-o"
                           ng-class="{
                             'fa fa-file-pdf-o': file.mime_type === 'application/pdf',
-                            'fa fa-file-image-o': file.mime_type === 'image/png' || file.mime_type == 'image/jpeg' || file.mime_type == 'image/gif',
+                            'fa fa-file-image-o': file.mime_type === 'image/png' || file.mime_type === 'image/jpeg' || file.mime_type === 'image/gif',
                             'fa fa-file-excel-o': file.mime_type === 'application/excel',
                             'fa fa-file-word-o': file.mime_type === 'application/msword'
                             }"
