AI-48: Fix review comments

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -36,3 +36,5 @@ $crm-sm-th-width: 200px;
 $fa-var-alert: '\f06a';
 $fa-var-info-msg: '\f05a';
 $fa-var-success: '\f00c';
+$fa-caret-down: '\f078';
+$fa-caret-right: '\f054';
