AI-48: Dashboard Improvements

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_widget-dashlet.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_widget-dashlet.scss
@@ -1,5 +1,6 @@
 #crm-container .widget .widget-controls {
-  padding: 17px 10px !important;
+  background-color: $crm-copy;
+  padding: 17px 10px;
 
   h3 {
     font-family: $font-family-base;
