AI-136: Fix allow multiple with inline custom fields slight tweaks issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -22,6 +22,7 @@ $crm-blue-light-color: #5897FB;
 $crm-cancel-color: #555;
 $crm-dark-gray-color: #70716b;
 $crm-green-color: #B0D730;
+$crm-light-gray-color: #818c97;
 $crm-light-green-color: #BEDEBB;
 
 $font-family-fontawesome: 'FontAwesome';
