--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -118,24 +118,21 @@
                     <i class="fa fa-ellipsis-v"></i>
                   </a>
                   <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                    <li ng-repeat="action in ctrl.actionsFor(request)" ng-switch on="action">
-                      <a ng-switch-when="cancel" href
-                        ng-click="ctrl.action(request, action)">
-                        {{action}}
-                      </a>
-                      <a ng-switch-when="approve" href
-                        ng-click="ctrl.action(request, action)">
-                        {{action}}
-                      </a>
-                      <a ng-switch-when="reject" href
-                        ng-click="ctrl.action(request, action)">
+                    <li
+                      ng-repeat="action in ctrl.actionsFor(request)"
+                      ng-switch="['cancel', 'approve', 'reject'].indexOf(action)">
+                      <a
+                        ng-switch-when="-1"
+                        href
+                        leave-request-popup leave-request="request"
+                        contact-id="ctrl.contactId"
+                        user-role="{{$root.role}}">
                         {{action}}
                       </a>
                       <a
                         ng-switch-default
                         href
-                        leave-request-popup leave-request="request"
-                        contact-id="ctrl.contactId" user-role="{{$root.role}}">
+                        ng-click="ctrl.action(request, action)">
                         {{action}}
                       </a>
                     </li>
