--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -138,34 +138,43 @@
             <tr>
               <td colspan="5" class="text-center">
                 <ul class="pagination">
-                  <li ng-click="ctrl.refresh(1)"
-                      class="active">
-                    <a class="pointer">
-                      <i class="fa fa-angle-double-left" aria-hidden="true"></i> First
-                    </a>
+                  <li
+                    ng-click="ctrl.refresh(1)"
+                    ng-hide="ctrl.pagination.page === 1"
+                    class="active">
+                      <a class="pointer">
+                        <i class="fa fa-angle-double-left" aria-hidden="true"></i> First
+                      </a>
                   </li>
-                  <li ng-click="ctrl.refresh(ctrl.pagination.page - 1)"
-                      class="active">
-                    <a class="pointer">
-                      <i class="fa fa-angle-left" aria-hidden="true"></i> Previous
-                    </a>
+                  <li
+                    ng-click="ctrl.refresh(ctrl.pagination.page - 1)"
+                    ng-hide="ctrl.pagination.page === 1"
+                    class="active">
+                      <a class="pointer">
+                        <i class="fa fa-angle-left" aria-hidden="true"></i> Previous
+                      </a>
                   </li>
-                  <li ng-class="{'active': ctrl.pagination.page - 1 === $index}"
-                      ng-click="ctrl.refresh($index + 1)"
-                      ng-repeat="a in ctrl.getArrayOfSize(ctrl.totalNoOfPages()) track by $index">
-                    <a>{{$index + 1}}</a>
+                  <li
+                    ng-class="{'active': ctrl.pagination.page - 1 === $index}"
+                    ng-click="ctrl.refresh($index + 1)"
+                    ng-repeat="a in ctrl.getArrayOfSize(ctrl.totalNoOfPages()) track by $index">
+                      <a>{{$index + 1}}</a>
                   </li>
-                  <li ng-click="ctrl.refresh(ctrl.pagination.page + 1)"
-                      class="active">
-                    <a class="pointer">
-                      Next <i class="fa fa-angle-right" aria-hidden="true"></i>
-                    </a>
+                  <li
+                    ng-click="ctrl.refresh(ctrl.pagination.page + 1)"
+                    ng-hide="ctrl.pagination.page >= ctrl.totalNoOfPages()"
+                    class="active">
+                      <a class="pointer">
+                        Next <i class="fa fa-angle-right" aria-hidden="true"></i>
+                      </a>
                   </li>
-                  <li ng-click="ctrl.refresh(ctrl.totalNoOfPages())"
-                      class="active">
-                    <a class="pointer">
-                      Last <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-                    </a>
+                  <li
+                    ng-click="ctrl.refresh(ctrl.totalNoOfPages())"
+                    ng-hide="ctrl.pagination.page >= ctrl.totalNoOfPages()"
+                    class="active">
+                      <a class="pointer">
+                        Last <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                      </a>
                   </li>
                 </ul>
               </td>
