--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -65,7 +65,9 @@
               <crm-loading show="!$ctrl.loading.showBalanceChange">
                 <div ng-show="$ctrl.uiOptions.showBalance">
                   <hr/>
-                  <div class="row chr_leave-request-modal__form-group">
+                  <div
+                    class="row chr_leave-request-modal__form-group"
+                    ng-if="$ctrl.isRole('manager') || $ctrl.isLeaveStatus($root.sharedSettings.statusNames.awaitingApproval) || $ctrl.isLeaveStatus($root.sharedSettings.statusNames.moreInformationRequired)">
                     <div class="col-xs-4">Opening Balance</div>
                     <div class="col-xs-8">{{$ctrl.balance.opening}}</div>
                   </div>
@@ -123,7 +125,10 @@
                       </tfoot>
                     </table>
                   </div>
-                  <div class="row" ng-class="{'text-danger': $ctrl.balance.closing < 0}">
+                  <div
+                    class="row"
+                    ng-class="{'text-danger': $ctrl.balance.closing < 0}"
+                    ng-if="$ctrl.isRole('manager') || $ctrl.isLeaveStatus($root.sharedSettings.statusNames.awaitingApproval) || $ctrl.isLeaveStatus($root.sharedSettings.statusNames.moreInformationRequired)">
                     <div class="col-xs-4">Closing Balance</div>
                     <div class="col-xs-8">{{$ctrl.balance.closing}}</div>
                   </div>
