PCHR-2236: Dont display decimals for contracts entitlements

--- a/hrjobcontract/views/modalForm.html
+++ b/hrjobcontract/views/modalForm.html
@@ -588,6 +588,7 @@
                                name="leave-{{leaveEntry.leave_type}}"
                                class="form-control"
                                hrjc-number="2"
+                               hrjc-number-float="true"
                                ng-model="leaveEntry.leave_amount" ng-disabled="isDisabled">
                       </div>
                       <div class="col-sm-3">
