--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/staff-leave-calendar.html
@@ -32,7 +32,7 @@
              ng-repeat="month in calendar.months track by $index">
       <ng-include
         ng-hide="(calendar.selectedMonths.length !== 0 && calendar.selectedMonths.indexOf(calendar.monthLabels[month.month]) === -1)"
-        src="$root.settings.pathTpl + 'components/my-leave-calendar-month.html'"></ng-include>
+        src="$root.sharedPathTpl + 'components/staff-leave-calendar-month.html'"></ng-include>
     </section>
 
     <section class="panel panel-default" ng-class="{ 'is-collapsed': calendar.legendCollapsed }">
