--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
@@ -1,4 +1,9 @@
+@import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/overrides/variables";
+@import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/variables";
+@import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/mixins/utility";
+
 // @file
 // SASS partials import
 // -----------------------------------------------------------------------------
 @import "pages/**/*";
+@import "components/**/*";
